--- a/src/components/FrameComponent4.css
+++ b/src/components/FrameComponent4.css
@@ -258,12 +258,12 @@
     font-size: 34px;
     line-height: 40px;
   }
-  /* .frame-parent1 {
+  .frame-parent1 {
     gap: 46px 93px;
     padding-top: 43px;
     padding-bottom: 66px;
     box-sizing: border-box;
-  } */
+  }
 .frame-parent2 {
 display: flex;
 flex-direction: column;
