--- a/src/components/WhatDoINeedToDoToMakeT.css
+++ b/src/components/WhatDoINeedToDoToMakeT.css
@@ -56,7 +56,6 @@
 }
 .hire-for-1000 {
   width: 312px;
-  position: relative;
   font-weight: 500;
   display: flex;
   align-items: center;
@@ -66,7 +65,7 @@
   align-self: stretch;
   display: flex;
   flex-direction: row;
-  align-items: flex-start;
+ 
   justify-content: center;
   padding: 0 20px;
 }
@@ -117,10 +116,11 @@
   align-items: flex-start;
 }
 .logic-operator {
+  width: fit-content;
   align-self: stretch;
   flex-direction: row;
-  justify-content: space-between;
-  gap: 20px;
+  justify-content: center;
+  gap: 40px;
 }
 .data-aggregator1 {
   width: 562px;
@@ -204,17 +204,23 @@
   font-family: Poppins;
 }
 @media screen and (max-width: 1400px) {
-  .what-do-i-need-to-do-to-make-t {
+  /* .what-do-i-need-to-do-to-make-t {
     flex-wrap: wrap;
     padding-left: 36px;
     padding-right: 36px;
     box-sizing: border-box;
-  }
+  } */
 }
-@media screen and (max-width: 825px) {
-  .logic-operator {
+@media screen and (max-width: 998px) {
+  .hire-for-1000-brands-includin-wrapper{
+    display: flex;
     flex-wrap: wrap;
     justify-content: center;
+  }
+  
+  .logic-operator {
+    flex-wrap: wrap;
+    justify-content: space-between;
   }
   .what-do-i-need-to-do-to-make-t {
     gap: 80px 40px;
